@@ -329,7 +329,7 @@ public class CourseResource {
             // only include courses that have NOT been finished
             userCourses = userCourses.filter(course -> course.getEndDate() == null || course.getEndDate().isAfter(ZonedDateTime.now()));
         }
-        return userCourses.collect(Collectors.toList());
+        return userCourses.toList();
     }
 
     /**
@@ -405,8 +405,7 @@ public class CourseResource {
             else {
                 return true;
             }
-        }).collect(Collectors.toList());
-        registrableCourses.removeAll(allRegisteredCourses);
+        }).filter(course -> !allRegisteredCourses.contains(course)).toList();
         return registrableCourses;
     }
 
